# dl4g

./: .flake8  .gitignore  README.md  generate_trump_data.py  jass.service  node_system.md  pyproject.toml  requirements.txt  run.py  service.py  train.py
README/: evaluation_results.md
data/: deep_nn_trump_selector.pt
notebooks/: 01_explore_trump_data.ipynb  02_train_trump_selection_nn.ipynb  03_calc_optimal_n_hands.ipynb  04_concat_npys.ipynb  05_test_minimax.ipynb  06_preprocess_swisslos.ipynb  07_calc_optimal_d_mcts.ipynb  08_debug_mcts.ipynb  09_desicion_transformer.ipynb
src/agent/: agent.py
src/arena/: training_arena.py
src/bots/: random_bot.py
src/play_rule_strategy/: abstract_play_rule.py  mini_max_play_rule_strategy.py  only_valid_play_strategy.py  pull_trumps_strategy.py  smear_play_strategy.py  swisslos_opening_play_rule_strategy.py  trump_jack_strategy.py
src/play_rules/: only_valid_play_strategy.py  smear_play_strategy.py
src/play_strategy/: abstract_play_strategy.py  determinized_mcts_play_strategy.py  highest_value_play_strategy.py  information_set_mcts_play_stategy.py  mcts_play_strategy.py  mock_play_strategy.py  only_valid_play_strategy.py  random_play_strategy.py  sampled_mcts_play_strategy.py  smear_play_strategy.py  test_highest_value_play_strategy.py  test_only_valid_play_strategy.py  test_random_play_strategy.py  test_smear_play_strategy.py
src/trump_strategy/: abstract_trump_strategy.py  deep_nn_trump_strategy.py  highest_score_trump_strategy.py  highest_sum_trump_strategy.py  random_trump_strategy.py  statistical_trump_strategy.py  (+2 more)
(+38 files in other folders)
